# torchvis

./: README.md  pyproject.toml  requirements.txt  setup.py
tests/: test_torchvis.py
torchvis/: __init__.py  selfish.py  stft.py  stftlib.py
torchvis/selflib/: util.py
