[tool.poetry]
name = "torchvis"
version = "0.2.3"
description = "Pytorch visualization experiments"
authors = ["Shawn Presser"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
ansi-escapes = "^0.1.1"
ansi-styles = "^0.2.2"
supports-color = "^0.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
